2002-10-02	<mschimek@users.sf.net>

	* video/vlc_mmx.s: Correction.
	* video/ratectl.h: Splitted for future field interleaving.
	* video, audio, vbi, systems, common, devices, test: #include
	  config.h didn't work reliable, changed to Makefile.am
	  compiler flag.

2002-09-12	<mschimek@users.sf.net>

	* video: encode_intra now reentrant. Let's hope speed
	  didn't suffer too much.

2002-09-08	<mschimek@users.sf.net>

	* video/filter.c: 4:2:0 cropping fix by Nikolai Zhubr.
	* main.c: HAVE_PROGRAM_INVOCATION_NAME fix.

2002-09-06	<mschimek@users.sf.net>

	* options.c, options.h, main.c: Added -k option.
	* systems/mpeg1.c, systems/systems.c: Added -k option.

2002-09-05	<mschimek@users.sf.net>

	* audio/mp2.c: Preliminary audio underrun fix by Nikolai Zhubr.

2002-09-04	<mschimek@users.sf.net>

	* devices/v4l.c: Fixed pthread_join bug.

2002-08-31	<mschimek@users.sf.net>

	* options.c: Fixed -n h:m:s, worked for -m2 only.

2002-08-26	<mschimek@users.sf.net>

	* devices/v4l.c: Applied corrections by Nikolai Zhubr.

2002-08-21	<mschimek@users.sf.net>

	* video/mpeg1.c: Rewrote aspect ratio encoding.
	* video/mpeg2.c, main.c: Dipped a toe into MPEG-2 interlace.
	* video/filter.c, video/filter_mmx.c: Added YUYV #2 and #3,
	  horizontal and bidirectional 2:1.
	* devices/v4l.c: Applied read fix and AIW patch by Nikolai Zhubr.
	* options.c, options.h: New AIW hack, frame rate and aspect
	  override options.
	* video/mblock.c: Added video_sampling_aspect() helper.

2002-07-25	<mschimek@users.sf.net>

	* video/mpeg1.c: Corrected NTSC aspect ratio code.

2002-06-06	<mschimek@users.sf.net>

	* video/vlc_gen.c: Added. There's just no reason to create static
	  tables at runtime and it's cleaner too.
	* video, audio: Removed device interfaces.
	* devices: Moved device interfaces here, cleanup for rte.

2002-05-29	<mschimek@users.sf.net>

	* video/v4l.c: Applied patch by Monty Walls.

2002-05-27	<mschimek@users.sf.net>

	* video/mpeg1.c: Added rte_status.valid flags.
